fix CSS, alignment of avatar in Firefox

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -2,13 +2,9 @@
 
 section.header .avatar {
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
-}
-.avatar {
-  min-width: 100px;
+  max-width: 100px;
   border: 3px solid black;
-  border-radius: 0%;
   float: right;
-  margin-left: 50px;
 }
 table {
   font-size: .9rem;
